--- a/titanic_final.ipynb
+++ b/titanic_final.ipynb
@@ -39,51 +39,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
-    "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
-    "execution": {
-     "iopub.execute_input": "2023-04-20T17:00:12.955430Z",
-     "iopub.status.busy": "2023-04-20T17:00:12.955035Z",
-     "iopub.status.idle": "2023-04-20T17:00:12.965480Z",
-     "shell.execute_reply": "2023-04-20T17:00:12.964195Z",
-     "shell.execute_reply.started": "2023-04-20T17:00:12.955394Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/kaggle/input/spaceship-titanic/sample_submission.csv\n",
-      "/kaggle/input/spaceship-titanic/train.csv\n",
-      "/kaggle/input/spaceship-titanic/test.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "# This Python 3 environment comes with many helpful analytics libraries installed\n",
-    "# It is defined by the kaggle/python Docker image: https://github.com/kaggle/docker-python\n",
-    "# For example, here's several helpful packages to load\n",
-    "\n",
-    "import numpy as np # linear algebra\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
-    "\n",
-    "# Input data files are available in the read-only \"../input/\" directory\n",
-    "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
-    "\n",
-    "import os\n",
-    "for dirname, _, filenames in os.walk('/kaggle/input'):\n",
-    "    for filename in filenames:\n",
-    "        print(os.path.join(dirname, filename))\n",
-    "\n",
-    "# You can write up to 20GB to the current directory (/kaggle/working/) that gets preserved as output when you create a version using \"Save & Run All\" \n",
-    "# You can also write temporary files to /kaggle/temp/, but they won't be saved outside of the current session"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -109,6 +64,7 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import seaborn as sns \n",
     "import matplotlib.pylab as plt\n",
     "%matplotlib inline\n",
@@ -125,21 +81,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {
+    "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
+    "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2023-04-20T17:00:12.982802Z",
-     "iopub.status.busy": "2023-04-20T17:00:12.981856Z",
-     "iopub.status.idle": "2023-04-20T17:00:13.032053Z",
-     "shell.execute_reply": "2023-04-20T17:00:13.031052Z",
-     "shell.execute_reply.started": "2023-04-20T17:00:12.982652Z"
+     "iopub.execute_input": "2023-04-20T17:00:12.955430Z",
+     "iopub.status.busy": "2023-04-20T17:00:12.955035Z",
+     "iopub.status.idle": "2023-04-20T17:00:12.965480Z",
+     "shell.execute_reply": "2023-04-20T17:00:12.964195Z",
+     "shell.execute_reply.started": "2023-04-20T17:00:12.955394Z"
     }
    },
    "outputs": [],
    "source": [
-    "## Read data\n",
-    "train_data = pd.read_csv('/kaggle/input/spaceship-titanic/train.csv')\n",
-    "test_data  = pd.read_csv('/kaggle/input/spaceship-titanic/test.csv')"
+    "import pandas as pd\n",
+    "\n",
+    "train_data = pd.read_csv('https://raw.githubusercontent.com/Andr3asAces/Kaggle-Titanic/main/data/train.csv')\n",
+    "test_data  = pd.read_csv('https://raw.githubusercontent.com/Andr3asAces/Kaggle-Titanic/main/data/test.csv')\n"
    ]
   },
   {
@@ -148,17 +107,6 @@
    "source": [
     "### Define target and features"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -5707,10 +5655,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Final Submission - version 1"
+    "### Final Submission"
    ]
   },
   {
@@ -5968,17 +5917,10 @@
     }
    ],
    "source": [
-    "sample_submission_df = pd.read_csv('/kaggle/input/spaceship-titanic/sample_submission.csv')\n",
+    "sample_submission_df = pd.read_csv('https://raw.githubusercontent.com/Andr3asAces/Kaggle-Titanic/main/data/sample_submission.csv')\n",
     "sample_submission_df['Transported'] = n_predictions\n",
-    "sample_submission_df.to_csv('/kaggle/working/submission.csv', index=False)\n",
+    "#sample_submission_df.to_csv('/kaggle/working/submission.csv', index=False)\n",
     "sample_submission_df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Save individual models"
    ]
   },
   {
